[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = vamdclib
description = Library for querying the VAMDC database
long_description = VAMDC
author = Christian Endres
author_email = endres@ph1.uni-koeln.de
license = BSD
url = vamdclib.readthedocs.org
edit_on_github = False
github_project = cpe/vamdclib

[entry_points]
astropy-package-template-example = packagename.example_mod:main
